# agentic-soc-platform

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONFIG.example.py  README.md  README_ZH.md  TODO.md  mcpserver.py  pyproject.toml  uvicorn.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  manage.py  pyproject.toml  readme.md
backend/apps/accounts/: admin.py  authentication.py  ldap.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0002_remove_user_job_number_remove_user_ldap_dn_and_more.py  0003_remove_user_avatar_user_avatar_content_type_and_more.py  0004_remove_user_avatar_content_type_and_more.py  0005_user_notification_preferences.py
backend/apps/agent_api/: responses.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/apps/agentic/: apps.py  models.py
backend/apps/agentic/analysis/: analysis.py  knowledge.py  (+7 more)
backend/apps/alerts/: models.py  serializers.py  urls.py  views.py
backend/apps/artifacts/: models.py  serializers.py  urls.py  views.py
backend/apps/attachments/: models.py  serializers.py  storage.py  tests.py  urls.py  views.py
backend/apps/audit/: apps.py  context.py  helpers.py  mixins.py  models.py  signals.py  urls.py  views.py
backend/apps/cases/: models.py  serializers.py  urls.py  views.py
backend/apps/comments/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/common/: advanced_filters.py  cursor_pagination.py  exceptions.py  logging.py  metadata.py  pagination.py  readable_ids.py  redis_stream.py  serializers.py  tests.py  urls.py  views.py  worker_runner.py
backend/apps/dashboard/: cache.py  urls.py  views.py
backend/apps/enrichments/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/inbox/: models.py  notifications.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/knowledge/: models.py  serializers.py  urls.py  views.py
backend/apps/mcp/: apps.py  asgi.py  auth.py  serializers.py  server.py  tests.py  tools.py
backend/apps/playbooks/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/preferences/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/realtime/: auth.py  consumers.py  events.py  groups.py  routing.py
backend/apps/settings/: custom_views.py  models.py  runtime_config.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/webhook/: elk_actions.py  schemas.py  service.py  tests.py  urls.py  views.py
backend/asp/: asgi.py  settings.py  urls.py  wsgi.py
backend/custom/: requirements.txt
backend/custom/modules/: aws_iam_privilege_escalation_attach_user_policy.py  edr_vssadmin_delete_shadows.py  mail_user_report_phishing.py
backend/custom/playbooks/: case_summary.py  cmdb_enrichment.py
backend/integrations/cmdb/: models.py  providers.py  service.py
backend/integrations/llm/: llmapi.py
backend/integrations/siem/: backends.py  clients.py  data_extractors.py  models.py  query_builders.py  registry.py  response.py  service.py  time_utils.py
backend/integrations/threat_intel/: models.py  providers.py  service.py  tests.py
backend/mock/: import_mock_data.py
backend/mock/siem/: .env.example  config.py  main.py  settings.py
backend/playbooks/: investigation.py  knowledge_extraction.py  threat_intelligence_enrichment.py
cli/: LICENSE  README.md  pyproject.toml
cli/src/asp_cli/: api_client.py  config.py  errors.py  main.py  output.py
(+411 files in other folders)
