[project]
name = "asp"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "django-cors-headers==4.9.0",
    "psycopg2-binary>=2.9.12",
    "django-filter==25.2",
    "python-dotenv==1.2.2",
    "django-redis==7.0.0",
    "djangorestframework-stubs==3.17.0",
    "django-storages[boto3]==1.14.6",
    "ldap3==2.9.1",
    "langchain-core==1.4.8",
    "langchain-openai==1.3.3",
    "pydantic==2.13.4",
    "httpx==0.28.1",
    "elasticsearch==9.4.1",
    "splunk-sdk==2.1.1",
    "pyyaml==6.0.3",
    "python-dateutil==2.9.0",
    "mcp[cli]==1.28.0",
    "gunicorn==26.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
